sass output compressed

--- a/index.html
+++ b/index.html
@@ -3,27 +3,7 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>{{ site.title }}</title>
-	<meta name="keywords" content="{{ site.keywords }}">
-	<meta name="description" content="{{ site.description }}">
-
-  <meta property="og:title" content="{{ site.title }}" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://cesium.di.uminho.pt/codeweek" />
-  <meta property="og:image" content="http://cesium.di.uminho.pt/codeweek/img/og-image.png" />
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
-  <link rel="stylesheet" href="stylesheets/combo.css">
-  <link rel="stylesheet" href="stylesheets/style.css">
-  <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.7/slick.css">
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.8/slick-theme.css"/>
-  {% if site.favicon %}<link rel="icon" href="{{ site.favicon }}" type="image/x-icon">{% endif %}
-	{% if site.touch_icon %}<link rel="apple-touch-icon" href="{{ site.touch_icon }}">{% endif %}
-  {% include analytics.html %}
+{% include head.html %}
 </head>
 <body>
   <div id="main">
