add lights and remove border lines

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@ layout: default
 
 {% for page in site.posts reversed %}
   {% capture id %}{{ page.id | remove:'/' | downcase }}{% endcapture %}
+  <ul class="lightrope">
+  <li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li>
+</ul>
   <div id="{{id}}" class="section p-{{id}}">
     {% if page.icon %}
     <div class="subtlecircle sectiondivider">
